--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "fman"
 version = "0.1.0"
+description = "A simple file manager TUI"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/ddanielsantos/fm"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
