--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 description = "A simple file manager TUI"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/ddanielsantos/fm"
+repository = "https://github.com/ddanielsantos/fman"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
