chore: add deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ repository = "https://github.com/ddanielsantos/fman"
 clap = { version = "4.5.20", features = ["derive"] }
 color-eyre = "0.6.3"
 ratatui = "0.28.1"
+tracing = "0.1.40"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
