--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ lazy_static = "1.5.0"
 ratatui = "0.28.1"
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
