--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,25 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    - name: Install targets
+      run: |
+        rustup target add x86_64-apple-darwin
+        rustup target add x86_64-pc-windows-gnu
+    - name: Build for Linux
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Build for macOS
+      run: cargo build --target x86_64-apple-darwin --verbose
+    - name: Build for Windows
+      run: cargo build --target x86_64-pc-windows-gnu --verbose
+
+  test-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
