--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,21 +10,28 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  generate-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.generate-matrix.outputs.matrix }}
     steps:
-    - uses: actions/checkout@v4
-    - name: Install targets
-      run: |
-        rustup target add x86_64-apple-darwin
-        rustup target add x86_64-pc-windows-gnu
-    - name: Build for Linux
-      run: cargo build
-    - name: Build for macOS
-      run: cargo build --target x86_64-apple-darwin
-    - name: Build for Windows
-      run: cargo build --target x86_64-pc-windows-gnu
-
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Generate build matrix
+        uses: reitermarkus/rust-build-matrix@main
+        id: generate-matrix  
+  build:
+    runs-on: ${{ matrix.os }}
+    needs: generate-matrix
+    strategy:
+      matrix:
+        include: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
+    steps:
+      # ...
+      - run: |
+          cargo build --target "${target}"
+        env:
+          target: ${{ matrix.target }}
   test-linux:
     runs-on: ubuntu-latest
     steps:
