ci: checkout repo before building

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,8 @@ jobs:
       matrix:
         include: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
     steps:
-      # ...
+      - name: Check out repository
+        uses: actions/checkout@v4
       - run: |
           cargo build --target "${target}"
         env:
